# share-preview

./: .gitignore  .gitlab-ci.yml  .transifex.yml  Cargo.toml  README.md  meson.build  meson_options.txt  share-preview.doap
.github/workflows/: ci.yml
build-aux/: com.rafaelmardojai.SharePreview.Devel.json
data/: com.rafaelmardojai.SharePreview.desktop.in.in  com.rafaelmardojai.SharePreview.gschema.xml.in  com.rafaelmardojai.SharePreview.metainfo.xml.in.in  com.rafaelmardojai.SharePreview.service.in  meson.build  resources.gresource.xml
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/ui/: card.ui  data-dialog.ui  image.ui  log-dialog.ui  metadata-item.ui  metadata.ui  shortcuts.ui  window.ui
data/resources/ui/cards/: discourse.ui  facebook.ui  linkedin.ui  mastodon.ui  twitter.ui
po/: LINGUAS  POTFILES.in  ar.po  bg.po  cs.po  de.po  es.po  fa.po  fi.po  fr.mo  fr.po  hi.po  hr.po  id.po  it.po  ja.po  ka.po  kk.po  meson.build  nb_NO.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro_RO.po  ru.po  share-preview.pot  sk.po  ta.po  tr.po  uk.po  vi.po  zh_Hans.po
src/: application.rs  card_widget.rs  config.rs.in  i18n.rs  main.rs  meson.build  window.rs
src/backend/: card.rs  data.rs  elements.rs  image.rs  log.rs  mod.rs  scraper.rs  social.rs
src/metadata/: elements.rs  mod.rs  scraper.rs
src/models/: log_item.rs  log_model.rs  metadata_item.rs  mod.rs
src/widgets/: card.rs  data_dialog.rs  image.rs  log_dialog.rs  metadata_item.rs  metadata_list.rs  mod.rs
