[package]
name = "share-preview"
version = "0.3.0"
authors = ["Rafael Mardojai CM <email@rafaelmardojai.com>"]
edition = "2018"

[dependencies]
adw = { package = "libadwaita", version = "0.3", features = ["v1_2"] }
image = "0.24"
log = "0.4"
im-rc = "15.1.0"
pretty_env_logger = "0.4"
gettext-rs = { version = "0.6", features = ["gettext-system"] }
gtk = { package = "gtk4", version = "0.6", features = ["v4_8"] }
gtk-macros = "0.3"
once_cell = "1.5"
url = "2.2"
scraper = "0.12"
surf = "2.2"
async-std = "1.12"
human_bytes = { version = "0.4", default-features = false }